--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-body {
-   /* margin: 0; */
-}
 canvas {
   border: 1px solid black;
 }
@@ -14,8 +11,13 @@ canvas {
 </head>
 <body>
 <div>
+  <button id="connect">Connect MSP board</button>
+  <button id="disconnect" hidden>Disconnect MSP board</button>
+</div>
+<div>
   <button id="clearScreen">Clear screen</button>
   <button id="toggleRefresh">Stop refreshing</button>
+  <button id="save">Save file</button>
 </div>
 <div>
   <canvas width="768" height="768">
@@ -24,9 +26,8 @@ canvas {
 "use strict";
 const cnv = document.querySelector("canvas");
 const ctx = cnv.getContext("2d");
-// ctx.willReadFrequently = true;
-// ctx.lineWidth = 3;
 
+/*
 let data = [
   0x90, 0xA7, 0x8D, 0xA8, 0x8E, 0xA7, 0x92, 0x9F, 0x93, 0x88, 0x91, 0x89, 0xAC, 0x8A, 0xB2, 0x98,
   0xAD, 0xA3, 0xB0, 0xB2, 0xA3, 0xBA, 0xA5, 0xD0, 0xCC, 0xDA, 0x89, 0xA9, 0x9F, 0xA4, 0xAD, 0xA1,
@@ -41,59 +42,41 @@ let data = [
   0x0F, 0x3D, 0x13, 0x2E, 0x0B, 0x20, 0x1E, 0x30, 0x4C, 0x31, 0x42, 0x25, 0x46, 0x2E, 0x58, 0x40,
   0x5A, 0x64, 0x6A, 0x7A, 0x6B, 0x88, 0x6F, 0x90, 0x75, 0x92, 0x82, 0x9D, 0x9A, 0x9A, 0xAC, 0xA0
 ];
+*/
+let data = [
+  0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F, 0x7F
+];
 
 let isRefresh = true;
 let currentFrame = 0;
-let timingFunc = function () {
-  /*
-  ctx.fillRect(currentFrame * 3, (255 - data[currentFrame]) * 3, 3, 3);
+let plotGraph = function () {
+  let lastData;
 
-  ctx.beginPath();
-  ctx.moveTo(currentFrame * 3 - 3, (255 - data[currentFrame - 1]) * 3)
-  ctx.lineTo(currentFrame * 3, (255 - data[currentFrame]) * 3);
-  ctx.stroke();
-  */
-  /**/
-  translateCanvas(3);
+  if (currentFrame == 0)
+    lastData = data[data.length - 1];
+  else
+    lastData = data[currentFrame - 1];
 
-  ctx.fillRect(765, (255 - data[currentFrame]) * 3, 3, 3);
-
-  ctx.beginPath();
-  ctx.moveTo(762, (255 - data[currentFrame - 1]) * 3)
-  ctx.lineTo(765, (255 - data[currentFrame]) * 3);
-  ctx.stroke();
-  /**/
+  drawPoint(data[currentFrame], lastData);
 
   if (currentFrame != data.length)
     currentFrame++;
   else
     currentFrame = 0;
 };
-let timer = setInterval(timingFunc, 100);
-
-/*
-for (let i = 0; i < data.length; i++) {
-  ctx.fillRect(i << 1, data[i] << 1, 2, 2);
-}
-*/
+// let timer = setInterval(readData, 100);
 
 const toggleRefresh = document.getElementById("toggleRefresh");
 toggleRefresh.addEventListener("click", () => {
   isRefresh = !isRefresh;
   if (isRefresh)
-    timer = setInterval(timingFunc, 100);
+    timer = setInterval(readData, 100);
   else
     clearInterval(timer);
   toggleRefresh.innerText = isRefresh ? "Stop refreshing" : "Start refreshing";
 });
 
 let translateCanvas = function (translationAmount = 1) {
-  /*
-  const temp = document.createElement("canvas");
-  temp.width = cnv.width;
-  temp.height = cnv.height;
-  const tempCtx = temp.getContext("2d");
-  */
 
   const imageData = ctx.getImageData(0, 0, cnv.width, cnv.height);
   let translatedData = new Uint8ClampedArray(imageData.data.length);
@@ -110,9 +93,6 @@ let translateCanvas = function (translationAmount = 1) {
     }
   }
 
-  // tempCtx.putImageData(translatedData, 0, 0);
-  // clearScreen();
-  // ctx.drawImage(temp, -translationAmount, 0);
   imageData.data.set(translatedData);
   ctx.putImageData(imageData, 0, 0);
 }
@@ -122,6 +102,63 @@ let clearScreen = function () {
 };
 
 document.getElementById("clearScreen").addEventListener("click", clearScreen);
+
+let drawPoint = function (newData, lastData, shiftAmount = 3) {
+  translateCanvas(shiftAmount);
+
+  ctx.fillRect(765, (254 - newData) * 3, 3, 3);
+
+  ctx.beginPath();
+  ctx.moveTo(767 - shiftAmount, (254 - lastData) * 3);
+  ctx.lineTo(767, (254 - newData) * 3);
+  ctx.stroke();
+};
+
+let port, reader;
+document.getElementById("connect").addEventListener("click", async () => {
+  port = await navigator.serial.requestPort();
+  document.getElementById("connect").disabled = true;
+  console.log(port.getInfo());
+  port.open({ baudRate: 9600 });
+  reader = port.readable.getReader();
+});
+
+let readData = function () {
+  const {value, done} = await reader.read();
+  data = value;
+  plotData();
+  if (done) {
+    // data = value;
+    reader.releaseLock();
+    break;
+  }
+}
+// let timer = setInterval(readData, 100);
+
+document.getElementById("disconnect").addEventListener("click", async () => {
+  document.getElementById("connect").disabled = false;
+  document.getElementById("disconnect").hidden = true;
+  await mspDevice.forget();
+});
+
+navigator.serial.addEventListener("disconnect", (e) => {
+  document.getElementById("connect").disabled = false;
+  document.getElementById("disconnect").hidden = true;
+});
+
+let saveFile = (blob) => {
+  const a = document.createElement("a");
+  a.download = "ecg_data.txt";
+  a.href = URL.createObjectURL(blob);
+  a.addEventListener("click", () => {
+    setTimeout(() => URL.revokeObjectURL(a.href), 30000);
+  });
+  a.click();
+};
+
+document.getElementById("save").addEventListener("click", () => {
+  saveFile(new Blob([data]));
+});
 </script>
 </body>
 </html>
