--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ document.getElementById("connect").addEventListener("click", async () => {
   reader = port.readable.getReader();
 });
 
-let readData = function () {
+let readData = async function () {
   const {value, done} = await reader.read();
   data = value;
   plotData();
